// Copyright 2023 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.clusterconfig.v1;

import "teleport/clusterconfig/v1/access_graph.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/clusterconfig/v1;clusterconfigv1";

// ClusterConfigService provides methods to manage cluster configuration resources.
service ClusterConfigService {
  // GetClusterAccessGraphConfig retrieves the Cluster Access Graph configuration from Auth server.
  rpc GetClusterAccessGraphConfig(GetClusterAccessGraphConfigRequest) returns (GetClusterAccessGraphConfigResponse);
}

// Request for GetClusterAccessGraphConfig
message GetClusterAccessGraphConfigRequest {}

// Response for GetClusterAccessGraphConfig
message GetClusterAccessGraphConfigResponse {
  // access_graph holds the information about Access Graph service.
  teleport.clusterconfig.v1.AccessGraphConfig access_graph = 1;
}
